kubernetes/microblog-service.yml
# microblog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: microblog
